# LearnTravis

./: .travis.yml  CMakeLists.txt  Makefile  README.md  main.cpp
testlib/: CMakeLists.txt
testlib/include/: testlib.hpp
testlib/src/: testlib.cpp
testlib/test/: testlib_test.cpp
